# ocular-disease-cnn

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: download_data.py
src/ocular_disease_cnn/: __init__.py  eval.py  model.py  predict.py  train.py
