[project]
name = "ocular-disease-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Diego Canales", email = "dcanales@uloyola.es" }
]
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
ocular-disease-cnn = "ocular_disease_cnn:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
